<resources>
    <string name="app_name">Movie DB</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="review_error">Something went wrong. Can\'t load Reviews.</string>
    <string name="movie_error">Something went wrong. Can\'t load Movies.</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="error_incorrect_information">Email address or Password is incorrect</string>
    <string name="prompt_firstname">First name</string>
    <string name="prompt_lastname">Last name</string>
    <string name="error_invalid_name">Name is invalid</string>
    <string name="error_user_exists">You already have account on MovieDB</string>
    <string name="action_user">First name</string>
    <string name="action_save">Save</string>
    <string name="action_exit">Logout</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="season_information">Season Information</string>
    <string name="dash">--</string>
</resources>
